--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -3,7 +3,7 @@
     <p><strong>{{burger_name}}</strong></p>
     <span>
 		<button class="change-devoured btn btn-primary" data-id="{{id}}" data-newdevoured="{{devoured}}">
-		{{#if devoured}}EATEN!{{else}}EAT IT!{{/if}}
+		{{#if devoured}}DELETE IT!{{else}}EAT IT!{{/if}}
 		</button>
 	</span>
 </li>
