place burgers on the left column and eaten burgers on the right column

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-12">
+    <div class="col-6">
       <hr>
       <h2 class="text-center"> MENU </h2>
       <hr>
@@ -20,14 +20,10 @@
         {{/each}}
       </ul>
     </div>
-  </div>
-</div>
 
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-12">
+    <div class="col-6">
       <hr>
-      <h2 class="text-center"> SOLD BURGERS </h2>
+      <h2 class="text-center"> SOLD </h2>
       <hr>
       <h4 class="text-center">Burgers Not Available To Eat:</h4> 
       <ul>
@@ -38,8 +34,15 @@
         {{/each}}
       </ul>
     </div>
+
   </div>
 </div>
+
+{{!-- <div class="container-fluid">
+  <div class="row">
+    
+  </div>
+</div> --}}
 
 <div class="container-fluid">
   <div class="row">
