--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,5 +1,5 @@
 <li class="list-group-item d-flex justify-content-between align-items-center">
-	<p>Burger {{id}}:</p>
+	<p>Burger:</p>
     <p><strong>{{burger_name}}</strong></p>
     <span>
 		<button class="change-devoured btn btn-primary" data-id="{{id}}" data-newdevoured="{{devoured}}">
